<resources>
<!--    Main Screen Strings-->
    <string name="app_name" translatable="false">MaTip</string>
    <string name="matip_logo">Matip Logo</string>
    <string name="calculate_tip">Calculate Tip</string>
    <string name="bill_amount">Bill Amount</string>
    <string name="tip_amount">Tip Amount</string>
    <string name="tip_percentage">Tip Percentage</string>
    <string name="split">Split</string>
    <string name="round_up_tip">Round up tip?</string>
    <string name="tipping_tab">Tipping</string>
    <string name="add_tip_to_list">Add Tip to List</string>
    <string name="back">Back</string>

...
