...
                    keyboardType = KeyboardType.Number,
                    imeAction = ImeAction.Done
                ),
                leadingIcon = R.drawable.percent
            )

            SplitCounter(
                splitUiState = uiState.splitShare,
                onclickPositive = { viewModel.increaseCounter() },
                onclickNegative = { viewModel.decreaseCounter() }
            )

            TotalTipAmount(viewModel.finalTip())

            RoundTheTipSwitch(
                modifier = Modifier
                    .padding(bottom = dimensionResource(R.dimen.padding_mid))
                    .align(alignment = Alignment.Start),
                roundUp = uiState.roundUp,
                onRoundUpChange = { viewModel.updateRoundUp(it) }
            )
...
