...
                    androidx.compose.animation.SizeTransform(clip = false)
                )
            },
            label = "TipAmountAnimation"
        ) { targetTip ->
            Text(
                modifier = Modifier.testTag("TipAmount"),
                text = targetTip,
                fontWeight = FontWeight.Bold,
                style = MaterialTheme.typography.titleLarge,
            )
        }
    }
...
